Bug: pulled out roverConfig.